<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MIAU</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_title_carusel">CARUSSEL</string>
    <string name="login_title_stock">STOCK IMAGES</string>

    <string name="login_form_login_button">Login</string>
    <string name="login_form_reset_button">Reset</string>
    <string name="login_field_title">Login</string>
    <string name="login_form_username_hint">Username</string>
    <string name="login_form_password_hint">Password</string>
    <string name="login_form_remember">  Remember me</string>
    <string name="login_username_empty_field">Username cannot be empty.</string>
    <string name="login_password_empty_field">Password cannot be empty</string>
    <string name="no_cars">Car wasn\'t found</string>
    <string name="no_cars_found">No cars found. Please start a new search</string>

    <string name="search_status">Condition</string>
    <string name="search_brand">Brand</string>
    <string name="search_model">Model</string>
    <string name="search_location">Location</string>
    <string name="search_job_number">Job number</string>
    <string name="search_select_the_car">Select the car</string>
    <string name="search_button_search">Search</string>
    <string name="search_show_images">Show images:</string>
    <string name="search_select_brand_first">Select brand first</string>
    <string name="search_ok">OK</string>

    <string name="search">Search</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>


    <string name="select_the_car">Select the car</string>
    <string name="car_list_order_by">Order by</string>
    <string name="car_list_back">Back</string>
    <string name="car_list_empty_list">There are no cars</string>
    <string name="sorry_error_get_data">Sorry error get data from server</string>
    <string name="no_cars_found_dialog">No cars found. Please start  a new search.</string>


    <string name="car_detail_list_item_imageplaceholder_text">Upload Image</string>
    <string name="dialog_select_photo_source_gallery">Gallery</string>
    <string name="dialog_select_photo_source_camera">Camera</string>
    <string name="dialog_select_photo_source_title">Select photo source</string>

    <string name="progress_dialog_loading">Loading&#8230;</string>
    <string name="upload_photo">Upload photo</string>

    <array name="spinner_order_by_choice_array">

        <item>Import date</item>
        <item>Price</item>
        <item>Mileage</item>
        <item>License date</item>
        <item>Brand name</item>
        <item>Order by</item>
    </array>
    <array name="spinner_order_by_choice_array_value">
        <item>Updated</item>
        <item>Price</item>
        <item>Mileage</item>
        <item>Year</item>
        <item>BrandTitle</item>
    </array>

    <string-array name="car_details_photo_context_menu_items">
        <item>Delete</item>
        <item>Save</item>
        <item>Copy</item>
    </string-array>

</resources>
