<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/search_select_the_car"

                android:textColor="@color/list_text_color_yellow"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/logOut_ImageView_SearchCarFragment"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:paddingRight="10dp"
                android:paddingLeft="20dp"


                android:src="@drawable/logout_btn"

                />

        </RelativeLayout>


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="vertical"
           android:paddingRight="30dp"
            android:paddingLeft="30dp"
            >


            <TextView
                style="@style/AppTheme.SearchTextView"


                android:text="@string/search_status" />


            <Spinner
                android:id="@+id/status_Spinner_SearchFragment"
                style="@style/AppTheme.Spinner"
                tools:listitem="@layout/search_fragment_spinner_item" />


            <TextView
                style="@style/AppTheme.SearchTextView"
                android:layout_marginTop="10dp"
                android:text="@string/search_brand" />


            <Spinner
                android:id="@+id/brand_Spinner_SearchFragment"
                style="@style/AppTheme.Spinner"
                android:layout_height="wrap_content"
                tools:listitem="@layout/search_fragment_spinner_item" />


            <TextView
                style="@style/AppTheme.SearchTextView"
                android:layout_marginTop="10dp"
                android:text="@string/search_model" />


            <Spinner
                android:id="@+id/model_Spinner_SearchFragment"
                style="@style/AppTheme.Spinner"
                tools:listitem="@layout/search_fragment_spinner_item" />


            <TextView
                style="@style/AppTheme.SearchTextView"
                android:layout_marginTop="10dp"
                android:text="@string/search_location" />

            <Spinner
                android:id="@+id/location_Spinner_SearchFragment"
                style="@style/AppTheme.Spinner"
                tools:listitem="@layout/search_fragment_spinner_item" />


            <TextView
                style="@style/AppTheme.SearchTextView"
                android:layout_marginTop="20dp"
                android:text="@string/search_job_number" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/job_Number_EditText_SearchFragment"
                    android:layout_width="@dimen/search_job_number_edit_text_width"
                    android:layout_height="@dimen/search_job_number_edit_text_height"
                    android:layout_marginTop="@dimen/search_job_number_edit_text_margin_top"
                    android:background="@drawable/login_edit_text_background"
                    android:gravity="center"
                    android:inputType="number"
                    android:textColor="@color/search_text_color_grey_dark"
                    android:textSize="@dimen/search_job_number_edit_text_textsize"

                    />


                <ImageView
                    android:id="@+id/search_ImageView_checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/search_checkbox_checked"
                    android:visibility="invisible" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/search_ImageView_checkBox"
                    android:text="@string/search_show_images"
                    android:visibility="invisible" />
            </RelativeLayout>

            <Button
                android:id="@+id/search_Button_SearchFragment"
                style="@style/AppTheme.LoginButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/search_button_height"
                android:layout_marginTop="@dimen/search_button_margin_top"
                android:background="@drawable/login_yellow_button"
                android:text="@string/search_button_search" />


            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="50dp"

                android:src="@drawable/carussel_logo" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
