<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">
    <!--android:background="@color/list_item_background_dark"-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/search_select_the_car"
            android:textColor="@color/list_text_color_yellow"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/textView_back_CarListFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/car_list_filter_back_text_margin_right"
            android:layout_marginStart="@dimen/car_list_filter_back_text_margin_right"
            android:drawableLeft="@drawable/ic_action_previous_item"
            android:gravity="center"
            android:text="@string/car_list_back"
            android:textColor="@color/list_text_color_blue"
            android:textSize="@dimen/car_list_filter_back_text_size" />


        <ImageView
            android:id="@+id/logOut_ImageView_SearchListFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/logout_btn"
            android:paddingRight="30dp"
            android:paddingLeft="20dp"
            />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/list_item_background_light"
        android:padding="20dp"
        android:weightSum="10"
        >

        <Spinner
            android:id="@+id/orderBy_Spinner_CarListFragment"
            style="@style/AppTheme.SpinnerSmall"
            android:layout_weight="6"
            tools:listitem="@layout/car_list_spinner_item" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:id="@+id/asc_desc_linearlayout_CarListFragment"
            >
        <ImageView
            android:id="@+id/asc_desc_ImageView_CarListFragment"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/sort_arrow_up_btn" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ascending"
            android:textColor="@color/search_text_color_grey_dark"
            android:id="@+id/textView_asceding_CarListFragment"
            />
            </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/listView_carsList_CarListFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@android:color/white"
        android:background="@android:color/transparent"
        tools:listitem="@layout/cars_list_item" />

    <TextView
        android:id="@+id/textView_empty_list_CarListFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/car_list_empty_list"
        android:textColor="@color/list_text_color_grey"
        android:visibility="gone" />


    <ProgressBar
        android:id="@+id/progress_ProgressBar_CarListFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />
</LinearLayout>